# RedTeamingRust

./: .gitignore  BUILD_WINDOWS.md  Cargo.toml  README.md  build_windows.sh
Benign Payloads/AMSI_Benign/: Cargo.toml
Benign Payloads/AMSI_Benign/src/: main.rs
Benign Payloads/APC_Injection_Benign/: Cargo.toml
docs/wiki/: AMSI.md  APC-Injection.md  Evasion-Payload.md  Payload-Generation.md  rust-xworm.md
src/AMSI/: Cargo.toml  README.md
src/Injection techniques/apc_injection/: Cargo.toml  README.md
src/Injection techniques/apc_injection/dll_payload_and_loader/dll_loader/src/: main.rs
src/Injection techniques/apc_injection/ipc_payload_and_loader/ipc_loader/: Cargo.toml
src/Injection techniques/apc_injection/ipc_payload_and_loader/ipc_loader/src/: main.rs
src/Injection techniques/apc_injection/ipc_payload_and_loader/ipc_payload/src/: main.rs
src/Injection techniques/apc_injection/kernel_apc/: Cargo.toml
src/Injection techniques/apc_injection/kernel_apc/src/: main.rs
src/Injection techniques/apc_injection/remote_process_apc/src/: main.rs
src/Injection techniques/apc_injection/user_apc/: Cargo.toml
src/apc_injection/: Cargo.toml  README.md
src/apc_injection/ipc_payload_and_loader/ipc_payload/: Cargo.toml
src/apc_injection/option_b/dll_loader/: Cargo.toml
src/apc_injection/option_b/payload_dll/: Cargo.toml
src/apc_injection/option_b/payload_dll/src/: lib.rs
src/apc_injection/remote_process_apc/: Cargo.toml
src/apc_injection/src/: main.rs
src/apc_injection/unsafe/: Cargo.toml
src/apc_injection/user_apc/src/: main.rs
(+15 files in other folders)
