[package]
name = "apc_injection"
version = "0.1.0"
edition = "2021"
authors = ["RedTeam Research"]
description = "Educational APC injection technique demonstration"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
